<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>pl.kurs</groupId>
    <artifactId>test-4-shapes</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>test-4-shapes</name>
    <description>Demo project for Spring Boot</description>
    <properties>
        <java.version>14</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>mysql</groupId>-->
<!--            <artifactId>mysql-connector-java</artifactId>-->
<!--            <scope>runtime</scope>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-hateoas</artifactId>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.21.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>2.24.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>**/*pl/kurs/test4shapes/commands/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/config/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/dto/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/exceptionhandling/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/exceptions/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/model/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/Test4ShapesApplication</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jacoco-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <exclude>**/*pl/kurs/test4shapes/commands/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/config/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/dto/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/exceptionhandling/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/exceptions/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/model/*</exclude>
                                <exclude>**/*pl/kurs/test4shapes/Test4ShapesApplication</exclude>
                            </excludes>
                            <rules>
                                <rule>
                                    <element>PACKAGE</element>
                                    <limits>
                                        <!--                                        <limit>-->
                                        <!--                                            <counter>LINE</counter>-->
                                        <!--                                            <value>COVEREDRATIO</value>-->
                                        <!--                                            <minimum>0.9</minimum>-->
                                        <!--                                        </limit>-->
                                        <!--                                        <limit>-->
                                        <!--                                            <counter>BRANCH</counter>-->
                                        <!--                                            <value>COVEREDRATIO</value>-->
                                        <!--                                            <minimum>0.9</minimum>-->
                                        <!--                                        </limit>-->
                                        <!--                                        <limit>-->
                                        <!--                                            <counter>METHOD</counter>-->
                                        <!--                                            <value>COVEREDRATIO</value>-->
                                        <!--                                            <minimum>1.0</minimum>-->
                                        <!--                                        </limit>-->
                                        <!--                                        <limit>-->
                                        <!--                                            <counter>CLASS</counter>-->
                                        <!--                                            <value>COVEREDRATIO</value>-->
                                        <!--                                            <minimum>1.0</minimum>-->
                                        <!--                                        </limit>-->

                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>

                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
